removed comms, test adaptive design

--- a/Falconiformes.html
+++ b/Falconiformes.html
@@ -191,7 +191,7 @@
 
     <main>
         <div class="section-title"><h1>Соколоподібні</h1></div>
-    <div class="image-grid" style="position: relative; text-align: center; margin-left: 500px;">
+    <div class="image-grid" style="position: relative; text-align: center;">
         <div class="grid-item">
             <a href="#" class="grid-button"> 
                 <img src="images/Falconiformes/pandion.png" alt="Опис зображення 1" class="grid-image">
