--- a/carnivora.html
+++ b/carnivora.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-all.css">
     <link rel="icon" href="images/logo.png" type="image/png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Червона книга України | Хижі</title>
 </head>
 <body>
@@ -191,7 +192,7 @@
 
     <main>
         <div id="123" class="section-title"><h1>Хижі</h1></div>
-    <div class="image-grid" style="position: relative; text-align: center; margin-left: 350px;">
+    <div class="image-grid" style="position: relative; text-align: center;">
         <div class="grid-item">
             <a href="bear.html" class="grid-button"> 
                 <img src="images/a-527.png" alt="Опис зображення 1" class="grid-image">
